<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DatabaseApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_user_email">Enter your email</string>
    <string name="text_view_user_auth">Enter your auth</string>
    <string name="button_enter_user">Enter User</string>
    <string name="edit_text_input_url">Enter a URL</string>
    <string name="button_enter_url">Add URL</string>
    <string name="button_cancel_url">Cancel</string>

</resources>
