<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_user_email"
        />
    <EditText
        android:id="@+id/input_user_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_user_auth"/>

    <Button
        android:id="@+id/user_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enter_user"/>

    <EditText
        android:id="@+id/input_site_address_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text_input_url"
        />

    <Button
        android:id="@+id/url_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enter_url"/>

    <Button
        android:id="@+id/url_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel_url"/>

</LinearLayout>
