<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/input_site_address_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text_input_url"
        />

    <Button
        android:id="@+id/url_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enter_url"/>

    <Button
        android:id="@+id/url_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel_url"/>

</LinearLayout>